- Added lockf() support, as supplied by Henning Nielsen Lund.
  Thank you very much!

- symlink() now also works for absolute and relative links, and is
  part of "libunix.a". This patch was supplied by Henning Nielsen Lund.
  Thank you very much!

- The __main() stub function expected by the 68k GCC build is no
  longer part of "stdlib_main.c". This helps the C++ support, since the
  __main symbol definition no longer clashes with the definition in
  "libgcc.a".

- The printf() family stripped trailing zeroes from the integer part
  of %g output. Fixed.

- Moved an allocation size roundup operation in realloc().


c.lib 1.198 (11.12.2005)

- Added <fenv.h> for C99, and the (yet unimplemented) functions
  feclearexcept(), fegetenv(), fegetexceptflag(), fegetround(),
  feholdexcept(), feraiseexcept(), fesetenv(), fesetexceptflag(),
  fetestexcept(), fetestround() and feupdateenv().

- Replaced the old pow() implementation. However, powf() may need to
  be changed to set a domain error.

- In libunix.a malloc(), calloc() and realloc() no longer treat a
  request to allocate 0 bytes as an error, returning NULL. They all
  return a pointer sized memory chunk (= four bytes) initialized to
  NULL (= 0) instead.

- The alloca() implementation which allocates memory from the system
  rather than the local stack frame is thread-safe now. It also
  interacts with the realloc(), calloc(), free() and malloc() functions
  in that the alloca() cleanup routine is called once alloca() has
  done its job. If all the memory allocated through alloca() has been
  released no further calls to the cleanup function will be made.

- In the thread-safe library, realloc() permitted two different overlapping
  calls to succeed in trying to reallocate the same chunk of memory due to
  a race condition. Fixed.

- Added a new function __get_mem_stats() (the prototype is in <dos.h>) which
  can be used to query the current and maximum memory usage, counting the